add eol message
