# internal/web/web.go
@@ -2,16 +2,14 @@ package web
 
 import (
 	"fmt"
-	"github.com/epiehl93/h24-notifier/config"
+	"github.com/766b/chi-logger"
 	"github.com/epiehl93/h24-notifier/internal/adapter"
+	"github.com/epiehl93/h24-notifier/internal/utils"
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
 	"github.com/go-chi/render"
-	"github.com/gorilla/sessions"
-	"github.com/markbates/goth/gothic"
-	"github.com/shurcooL/graphql"
+	"github.com/spf13/viper"
 	httpSwagger "github.com/swaggo/http-swagger"
-	"gorm.io/gorm"
 	"log"
 	"net/http"
 	"os"
@@ -21,8 +19,8 @@ type App interface {
 	Run() error
 }
 
-type app struct {
-	adapter.Registry
+type AppImpl struct {
+	*adapter.Registry
 	WishlistController
 	HealthController
 	ItemController
@@ -30,28 +28,25 @@ type app struct {
 	router *chi.Mux
 }
 
-func (a app) Run() error {
+func (a AppImpl) Run() error {
 	APIVersion = "0.0.2"
 
-	log.Println("configuring auth...")
-
-	gothic.Store = sessions.NewCookieStore([]byte("mysuperhardcodedsecret"))
-	log.Println("adding middlewares...")
+	utils.Log.Infof("adding middlewares...")
 
 	a.router.Use(middleware.RequestID)
 	a.router.Use(middleware.RealIP)
-	a.router.Use(middleware.Logger)
+	a.router.Use(chilogger.NewZapMiddleware("router", utils.LLogger))
 	a.router.Use(middleware.Recoverer)
 
-	log.Println("adding routes...")
+	utils.Log.Infof("adding routes...")
 	// Health route
 	a.router.Get("/health", a.GetHealth)
 
 	// Api V1
 	a.router.Route("/api/v1", func(r chi.Router) {
-		r.Use(a.AuthCtx)
 		// Wishlist Endpoint
 		r.Route("/wishlist", func(r chi.Router) {
+			r.Use(a.AuthCtx)
 			r.Get("/", a.GetAllWishlists)
 			r.Post("/", a.CreateWishlist)
 
@@ -68,7 +63,8 @@ func (a app) Run() error {
 		})
 		// Item Endpoint
 		r.Route("/item", func(r chi.Router) {
-			r.Get("/", a.ListItems)
+			r.Get("/", a.PaginatedListItems)
+			r.Get("/search", a.SearchItems)
 			r.Route("/{itemSKU}", func(r chi.Router) {
 				r.Use(a.ItemCtx)
 				r.Get("/", a.GetItem)
@@ -76,7 +72,7 @@ func (a app) Run() error {
 		})
 	})
 
-	if !config.C.Server.Production {
+	if !viper.GetBool("server.production") {
 		// Serve swagger.json
 		var cwd string
 		var err error
@@ -86,11 +82,10 @@ func (a app) Run() error {
 
 		rootDocs := cwd + "/assets/swagger"
 		fs := http.FileServer(http.Dir(rootDocs))
-		fmt.Println(fs)
 
 		a.router.Get("/swagger.json", func(w http.ResponseWriter, r *http.Request) {
 			if _, err := os.Stat(rootDocs + r.RequestURI); err != nil {
-				fmt.Println(err)
+				utils.Log.Error(err)
 				render.Status(r, 404)
 				return
 			} else {
@@ -99,28 +94,34 @@ func (a app) Run() error {
 		})
 
 		a.router.Get("/swagger/*", httpSwagger.Handler(
-			httpSwagger.URL("http://"+config.C.Server.Host+":"+config.C.Server.Port+"/swagger.json"),
+			httpSwagger.URL("http://"+viper.GetString("server.host")+":"+viper.GetString("server.port")+"/swagger.json"),
 		))
 	}
 
-	log.Println("starting server...")
-	err := http.ListenAndServe(fmt.Sprintf("%s:%s", config.C.Server.Host, config.C.Server.Port), a.router)
+	utils.Log.Infof("running server at %s:%s",
+		viper.GetString("server.host"),
+		viper.GetString("server.port"),
+	)
+
+	err := http.ListenAndServe(fmt.Sprintf("%s:%s",
+		viper.GetString("server.host"),
+		viper.GetString("server.port")),
+		a.router,
+	)
+
 	if err != nil {
 		return err
 	}
-
-	log.Println("done...")
 	return nil
 }
 
-func NewApp(db *gorm.DB, gql *graphql.Client) (App, error) {
-	r := adapter.NewRegistry(db, gql)
-	return &app{
+func NewApp(r *adapter.Registry, wController WishlistController, hController HealthController, iController ItemController, ctx ApplicationContext) (App, error) {
+	return &AppImpl{
 		r,
-		NewWishlistController(r),
-		NewHealthController(r),
-		NewItemController(r),
-		NewApplicationContext(r),
+		wController,
+		hController,
+		iController,
+		ctx,
 		chi.NewRouter(),
 	}, nil
 }
